fixed spacing

--- a/css/default.css
+++ b/css/default.css
@@ -158,6 +158,8 @@ ul.style2 li:first-child {
 	color: #FFF;
 	font-size: 1.4em;
 	font-weight: 700;
+	margin-top: 2%
+	margin-bottom: 2%
 }
 
 .button:hover {
@@ -356,7 +358,7 @@ h5 {
 	display: block;
 	padding-top: 0.50em;
 	font-size: 1.4em;
-	color: blue;
+	color: #2b87ef;
 }
 
 /*********************************************************************************/
